rota que mostra o dan com mais reprovados
